# gen-sql-pdf

./: .gitignore  Cargo.toml
data/templates/: empty.html  real.html  table.html
data/templates/fonts/Barlow/: demo.html
src/: database.rs  input.rs  main.rs  pdfgen.rs  render.rs
themes/: default-common.css  default-dark.css  default-light.css  test.html
themes/fonts/Barlow/: stylesheet.css
themes/fonts/FiraCode/: stylesheet.css
themes/fonts/FiraSans/: demo.html  stylesheet.css
